Fix spacing

--- a/_assets/sass/pages/_writing.sass
+++ b/_assets/sass/pages/_writing.sass
@@ -92,7 +92,7 @@ main > .post
 
   &__pagination
     margin: 0 auto
-    max-width: 36em
+    max-width: 32em
 
     .page--post &
       margin: 0 auto #{$baseline * 3}
